-- Header was not aligned as expected --Fix header alignment and color

--- a/Js_Practice/JS_Part1/style.css
+++ b/Js_Practice/JS_Part1/style.css
@@ -3,7 +3,7 @@ html{
 }
 body {
     background: #0a0a0a;
-    color: #bffff4cf;
+    color: white;
 }
 nav{
     display: grid;
@@ -21,29 +21,6 @@ main{
     border:1px solid;
     margin:1rem;
 }
-
-
-/*
-.topics-container {
-    display: grid;
-    border: 1px solid;
-    margin: 1rem;
-    justify-content: center;
-    background: #00878b;
-}
-.topic-item {
-    display: grid;
-    border: 1px solid;
-    margin: 1rem;
-    /* justify-items: center;
-    justify-content: center;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: minmax(auto, auto) 1fr;
-    grid-auto-flow: row;
-    grid-auto-rows: minmax(auto, auto);
-    background: #000;
-    color: blanchedalmond;
-} */
 .header {
     display: grid;
     grid-template-columns: 5fr 1fr;
